# money-joins

./: .gitignore
multicore-join/src/: .hash.h.swp  .no_partitioning_join.c.swp  .npj_params.h.swp  .npj_types.h.swp  .pmj_params.h.swp  .pmoney_join_3.c.swp  Makefile  Makefile.am  Makefile.in  cpu-mapping.txt  generator.c  generator.h  hash.h  hyper_join.c  hyper_join.h  main.c  no_partitioning_join.c  npj_params.h  parallel_radix_join.c  perf_counters.c  pmj_params.h  pmoney_join.c  pmoney_join.h  pmoney_join_2.c  pmoney_join_2.h  pmoney_join_3.c  pmoney_join_3.c.old  pmoney_join_3.h  pmoney_join_4.c  pmoney_join_4.h  pmoney_join_5.c  pmoney_join_5.h  pmoney_join_6.c  pmoney_join_6.h  pmoney_join_7.c  pmoney_join_7.h  pmoney_join_8.c  pmoney_join_8.h  pmoney_join_9.c  pmoney_join_9.h  (+3 more)
multicore-join/src/DAWN/: CuckooMap.h  dawn_join.c  dawn_join.h
multicore-join/src/TUM/: Affinitizer.cpp  Affinitizer.h  Barrier.cpp  Barrier.h  HashTable.h  Lock.h  MemoryMappedFile.h  MersenneTwister.h  NoPartitionArrayJoin.h  NoPartitionHashJoin.h  NoPartitionJoin.cpp  NoPartitionJoin.h  ParallelJoin.h  ProcessorMap.cpp  ProcessorMap.h  Utils.h
multicore-join/src/cuckoo/: cuckoo_join.c  cuckoo_join.h
multicore-join/src/hopscotch/: hopscotch_join.c  hopscotch_join.h
multicore-join/src/judy/: judy_join.c  judy_join.h
multicore-join/src/judy/judy-1.0.5/: Makefile  libtool
multicore-join/src/judy/judy-1.0.5/doc/: Makefile
multicore-join/src/judy/judy-1.0.5/doc/man/man3/: Judy  Judy1  Judy1_funcs  JudyHS  JudyHS_funcs  JudyL  JudyL_funcs  JudySL  JudySL_funcs
multicore-join/src/judy/judy-1.0.5/src/: Makefile
multicore-join/src/judy/judy-1.0.5/src/Judy1/: Judy1TablesGen  Makefile
multicore-join/src/judy/judy-1.0.5/src/JudyCommon/: Makefile
multicore-join/src/judy/judy-1.0.5/src/JudyHS/: Makefile
multicore-join/src/judy/judy-1.0.5/src/JudyL/: JudyLTablesGen  Makefile
multicore-join/src/judy/judy-1.0.5/src/JudySL/: Makefile
multicore-join/src/judy/judy-1.0.5/test/: Judy1LHCheck  Judy1LHTime  Makefile  SL_Hash  SL_Judy  SL_Redblack  SL_Splay
multicore-join/src/judy/judy-1.0.5/tool/: Makefile  jhton
multicore-join/src/nd-hash/: ndHash.h  ndhash_join.c  ndhash_join.h  parallel.h  utils.h
(+51 files in other folders)
